# terminal-dot-portfolio-TUI

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: deploy.yml
components/: footer.cpp  navbar.cpp  sidebar.cpp
helpers/: bullet-points.cpp  send-message.cpp  validate-input.cpp
tabs/: about-me.cpp  contact-form.cpp  contact-me.cpp  experience.cpp  projects.cpp
